Revamped sector controller tests